@@ -1,5 +1,9 @@
 2016-07-28  Danil Kutkevich  <danil@kutkevich.org>
 
+        * main.go (main, ptichka): Ability to handle multiple accounts
+        in parallel.
+        * config.go (loadConfig): Load config with multiple accounts.
+
         * main.go (main): Get path to config from arguments.
 
 2016-07-27  Danil Kutkevich  <danil@kutkevich.org>
